scss/partials/_onboard_wrapper.scss
/* ... */
div.onboard-email-container {
  width: 339px;
  @include avenir_M;
  color: $carrot_gray;
  font-size: 32px;
  margin: 0 auto;
  position: relative;
  top: 50%;

  &.small {
    font-size: 24px;
  }

  &.dot-animation {
    text-align: left;
    width: 260px;
  }

  &.error {
    color: $carrot_orange;
  }

  &.email-wall {
    width: 385px;
    color: $deep_navy;
    @incldude avenir_H();

    div.email-wall-icon {
      background-image: cdnUrl("/img/ML/email_wall.svg");
      background-size: 48px 36px;
      background-position: center;
      width: 48px;
      height: 36px;
      margin: 0 auto 32px;
    }

    div.email-wall-subtitle {
      @include avenir_R();
      font-size: 18px;
      margin-top: 16px;
    }

    div.email-wall-sent-link {
      color: $deep_navy;
      @include avenir_R();
      font-size: 18px;
      margin-top: 56px;

      div.email-address {
        @include avenir_H();
        font-size: 18px;
        color: $deep_navy;
      }
    }
  }

  button.continue {
    margin-top: 16px;
    width: 170px;
    height: 42px;
    background-color: $sea_blue;
    color: white;
    @include avenir_H();
    font-size: 16px;
    border-radius: 4px;
    outline: none;
    border: none;

    &.disabled {
      background-color: $light_ui_grey;
    }
  }
}
/* ... */

